# test_test

./: .editorconfig  .flake8  .gitignore  .lintstagedrc.json  Caddyfile  docker-compose.dev.yaml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.husky/: pre-commit
.turbo/cache/: 8446e445bc02c1ef-meta.json  8446e445bc02c1ef.tar.zst  cafa2dad02d3331e-meta.json  cafa2dad02d3331e.tar.zst
.turbo/preferences/: tui.json
abc/: package.json  pnpm-lock.yaml
apps/web/: Dockerfile  eslint.config.js  next.config.js  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  routeTree.gen.ts
apps/web/src/components/: LoginForm.tsx  (+2 more)
gojet/: pnpm-lock.yaml
server/: .env.example  Dockerfile  gunicorn.conf.py
server/api/: urls.py
server/api/auth/: serializers.py  urls.py  views.py
server/api/habit/: serializers.py  urls.py  viewsets.py
server/api/user/: serializer.py  urls.py  views.py
server/app/: admin.py  models.py  signals.py
server/app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_month_days_alter_habit_weekdays_and_more.py  0004_alter_habitcompletion_notes.py
server/core/: admin.py  models.py  signals.py
server/core/migrations/: 0001_initial.py  0002_profile_age_profile_bio_profile_gender_and_more.py
server/main/: asgi.py  settings.py  urls.py  wsgi.py
server/main/settings/: __init__.py  apps.py  auth.py  base.py  database.py  email.py  i18n.py  middleware.py  security.py  static.py
(+18 files in other folders)
